--- a/src/main/resources/static/dashboard.html
+++ b/src/main/resources/static/dashboard.html
@@ -24,7 +24,7 @@
                         <a class="nav-link active" href="/dashboard.html">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Explore</a>
+                        <a class="nav-link" href="/explore.html">Explore</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pull Requests</a>
