--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,11 @@
     <title>CodeShare - Collaborative Coding Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="/css/style.css">
+
+    <link rel="stylesheet" href="/css/dark-theme.css">
+
+    <script src="/js/theme-switcher.js" defer></script>
     <style>
         :root {
             --primary-color: #4e73df;
@@ -160,6 +165,32 @@
                         </ul>
                     </li>
                 </ul>
+                <div class="theme-toggle d-flex align-items-center ms-3">
+                    <style>
+                        /* Basic Styles for the Toggle Switch */
+                        /* Note: It's better to move these styles to your CSS file */
+                        .theme-switch { position: relative; display: inline-block; width: 50px; height: 24px; margin: 0 10px; vertical-align: middle; }
+                        .theme-switch input { opacity: 0; width: 0; height: 0; }
+                        .slider { position: absolute; cursor: pointer; top: 0; left: 0; right: 0; bottom: 0; background-color: #4c566a; transition: .4s; border-radius: 24px; }
+                        .slider:before { position: absolute; content: ""; height: 18px; width: 18px; left: 3px; bottom: 3px; background-color: white; transition: .4s; border-radius: 50%; }
+                        input:checked + .slider { background-color: var(--gh-dark-link, #58a6ff); }
+                        input:checked + .slider:before { transform: translateX(26px); }
+                        .theme-switch .sun-icon, .theme-switch .moon-icon { position: absolute; top: 50%; transform: translateY(-50%); font-size: 12px; color: #d8dee9; transition: opacity 0.3s; pointer-events: none; }
+                        .theme-switch .sun-icon { left: 5px; opacity: 1; }
+                        .theme-switch .moon-icon { right: 5px; opacity: 0; }
+                        input:checked ~ .sun-icon { opacity: 0; }
+                        input:checked ~ .moon-icon { opacity: 1; }
+                        html[data-theme="light"] .theme-switch .sun-icon { color: #434c5e; }
+                        html[data-theme="dark"] .theme-switch .moon-icon { color: #eceff4; }
+                        html[data-theme="dark"] .slider { background-color: #434c5e; }
+                    </style>
+                    <label class="theme-switch" for="theme-toggle" title="Toggle theme">
+                        <input type="checkbox" id="theme-toggle">
+                        <span class="slider"></span>
+                         <i class="fas fa-sun sun-icon"></i>
+                         <i class="fas fa-moon moon-icon"></i>
+                    </label>
+                </div>
                 <div class="d-flex ms-3">
                     <a href="/login.html" class="btn btn-outline-primary me-2">Login</a>
                     <a href="/signup.html" class="btn btn-primary">Sign Up</a>
