--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Code Sharing Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+
+    <link rel="stylesheet" href="/css/dark-theme.css">
+
+    <script src="/js/theme-switcher.js" defer></script>
 </head>
 <body>
     <div class="container mt-5">
