--- a/src/main/resources/static/signup.html
+++ b/src/main/resources/static/signup.html
@@ -6,6 +6,11 @@
     <title>Sign Up - Code Sharing Platform</title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+
+    <link rel="stylesheet" href="/css/dark-theme.css">
+
+    <script src="/js/theme-switcher.js" defer></script>
 </head>
 <body>
     <div class="container mt-5">
