--- a/src/main/resources/static/commit-details.html
+++ b/src/main/resources/static/commit-details.html
@@ -363,7 +363,7 @@
                         <a class="nav-link" href="/dashboard.html">Dashboard</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/project.html">Project</a>
+                        <a class="nav-link active" id="projectNavLink" href="#">Project</a>
                     </li>
                 </ul>
                 <div class="d-flex align-items-center">
