--- a/src/main/resources/static/project.html
+++ b/src/main/resources/static/project.html
@@ -52,10 +52,10 @@
                     <p class="description" id="projectDescription"></p>
                 </div>
                 <div class="d-flex gap-2">
-                    <button class="gh-btn">
-                        <i class="fa fa-star"></i> Star
+                    <button class="gh-btn" id="starBtn">
+                        <i class="fa fa-star-o"></i> Star
                     </button>
-                    <button class="gh-btn">
+                    <button class="gh-btn" id="forkBtn">
                         <i class="fa fa-code-fork"></i> Fork
                     </button>
                 </div>
@@ -76,7 +76,7 @@
                             <div class="small text-muted mt-1">You choose who can see and commit to this repository</div>
                         </a></li>
                     </ul>
-                </div>
+                </div class="d-flex gap-2">
                 <button class="gh-btn" id="starBtn">
                     <i class="fa fa-star-o"></i> Star
                 </button>
